# spider-rs

./: Cargo.toml
src/: main.rs
src/tmp/: data.json  test.txt
