[package]
name = "spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.24", features = ["json"]}
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.113"
rand = "0.8.5"
futures = "0.3.30"
async-recursion = "1.0.5"
async-once-cell = "0.5.3"
lazy_static = "1.4.0"
async-std = "1.12.0"